[project]
name = "usra"
version = "0.1.0"
description = "Summer USRA 2026 project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.42.97",
    "litellm>=1.83.0",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.3",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "wizmap>=0.1.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
